Añado al enunciado las capturas que se deben entregar

--- a/TAREAS/SR0402_ftp2/SR0402_ftp2.md
+++ b/TAREAS/SR0402_ftp2/SR0402_ftp2.md
@@ -2,11 +2,12 @@
   - [**1. Crear un Nuevo Sitio FTP Virtual en IIS en Windows Server 2019**](#1-crear-un-nuevo-sitio-ftp-virtual-en-iis-en-windows-server-2019)
   - [**2. Configurar Usuarios en el Administrador de Usuarios del Servidor**](#2-configurar-usuarios-en-el-administrador-de-usuarios-del-servidor)
   - [**3. Comprobar la Configuración con FileZilla**](#3-comprobar-la-configuración-con-filezilla)
+  - [**Qué debo entregar**](#qué-debo-entregar)
 
 # **SR0402 Práctica: Configuración de un nuevo FTP Virtual en Windows Server 2019**
 
 **Objetivo**:
-En esta tarea, los alumnos configurarán un segundo servidor FTP virtual en Windows Server 2019. Se aprenderá a crear un sitio FTP adicional, configurar autenticación básica y anónima, y comprobar el acceso utilizando el cliente FTP FileZilla.
+En esta tarea, los alumnos configurarán un segundo servidor FTP virtual en Windows Server 2019. Se aprenderá a crear un **sitio FTP adicional**, configurar autenticación **básica** y **anónima**, y comprobar el acceso utilizando el cliente FTP **FileZilla**.
 
 ## **1. Crear un Nuevo Sitio FTP Virtual en IIS en Windows Server 2019**
    - Abrir el "Administrador de IIS" y agregar un nuevo sitio FTP.
@@ -40,7 +41,7 @@ En esta tarea, los alumnos configurarán un segundo servidor FTP virtual en Wind
      - Abrir **FileZilla**.
      - En la parte superior de la interfaz, localizar la barra de conexión rápida, donde se introducen los datos del servidor.
        - **Servidor**: Introducir la dirección IP **172.16.X.9** (donde **X** es el número de lista del alumno).
-       - **Nombre de Usuario**: Escribir **AdminFTP**.
+       - **Nombre de Usuario**: Escribir **nombreHostVirtual|AdminFTP**.
        - **Contraseña**: Escribir la contraseña correspondiente.
        - **Puerto**: Introducir **21**.
      - Hacer clic en el botón **Conexión rápida**.
@@ -54,7 +55,7 @@ En esta tarea, los alumnos configurarán un segundo servidor FTP virtual en Wind
      - Abrir **FileZilla**.
      - Utilizar nuevamente la barra de conexión rápida en la parte superior de la interfaz.
        - **Servidor**: Introducir la dirección IP **172.16.X.9**.
-       - **Nombre de Usuario**: Escribir **Anonymous**.
+       - **Nombre de Usuario**: Escribir **nombreHostVirtual|Anonymous**.
        - **Contraseña**: Dejar el campo vacío o escribir cualquier valor.
        - **Puerto**: Introducir **21**.
      - Hacer clic en el botón **Conexión rápida**.
@@ -69,3 +70,8 @@ En esta tarea, los alumnos configurarán un segundo servidor FTP virtual en Wind
 **Objetivo de Evaluación:**
 - Verificar que los alumnos son capaces de crear un servidor FTP virtual adicional, gestionar los permisos de usuarios y configurar autenticaciones distintas, así como probar el acceso al servidor con usuarios diferentes mediante un cliente FTP.
 
+## **Qué debo entregar**
+
+- Captura del gestor de FTP de WS19 en la que se muestre que tienes dos sitios FTP creados, llama a la captura nombre1.png
+- Captura de una conexión desde FileZilla utilizando un usuario llamado como tú, a uno de los sitios. También se debe apreciar cómo puedes subir un archivo al servidor FTP, llama a la captura nombre2.png 
+- Captura de una conexión desde FileZilla utilizando el usuario anónimo. También se debe apreciar cómo **NO** puedes subir un archivo al servidor FTP, llama a la captura nombre3.png
