--- a/TAREAS/SR0402_ftp2/SR0402_ftp2.md
+++ b/TAREAS/SR0402_ftp2/SR0402_ftp2.md
@@ -41,7 +41,7 @@ En esta tarea, los alumnos configurarán un segundo servidor FTP virtual en Wind
      - Abrir **FileZilla**.
      - En la parte superior de la interfaz, localizar la barra de conexión rápida, donde se introducen los datos del servidor.
        - **Servidor**: Introducir la dirección IP **172.16.X.9** (donde **X** es el número de lista del alumno).
-       - **Nombre de Usuario**: Escribir **nombreHostVirtual|AdminFTP**.
+       - **Nombre de Usuario**: Escribir `nombreHostVirtual|AdminFTP`.
        - **Contraseña**: Escribir la contraseña correspondiente.
        - **Puerto**: Introducir **21**.
      - Hacer clic en el botón **Conexión rápida**.
@@ -55,7 +55,7 @@ En esta tarea, los alumnos configurarán un segundo servidor FTP virtual en Wind
      - Abrir **FileZilla**.
      - Utilizar nuevamente la barra de conexión rápida en la parte superior de la interfaz.
        - **Servidor**: Introducir la dirección IP **172.16.X.9**.
-       - **Nombre de Usuario**: Escribir **nombreHostVirtual|Anonymous**.
+       - **Nombre de Usuario**: Escribir `nombreHostVirtual|Anonymous`.
        - **Contraseña**: Dejar el campo vacío o escribir cualquier valor.
        - **Puerto**: Introducir **21**.
      - Hacer clic en el botón **Conexión rápida**.
