Cómo compruebo que existe el usuario Anonymous

--- a/TAREAS/SR0402_ftp2/SR0402_ftp2.md
+++ b/TAREAS/SR0402_ftp2/SR0402_ftp2.md
@@ -27,6 +27,8 @@ En esta tarea, los alumnos configurarán un segundo servidor FTP virtual en Wind
    - **1.4.** Configurar el número máximo de conexiones simultáneas a **50**.
 
 ## **2. Configurar Usuarios en el Administrador de Usuarios del Servidor**
+   - **2.0.** Confirmar que existe el usuario **Anonymous**:
+   - ![alt text](image-1.png)
    - **2.1.** (((Crear el usuario **Anonymous** si no existe:
      - Abrir "Administración de Equipos" y navegar hasta "Usuarios y grupos locales".
      - Crear el usuario **Anonymous** si no está creado.)))
