--- a/TAREAS/SR0603_X11/SR0603_X11.md
+++ b/TAREAS/SR0603_X11/SR0603_X11.md
@@ -1,160 +1,352 @@
-# Práctica: Uso de SSH con Reenvío X11 en Ubuntu Desktop
+- [Práctica guiada: Uso de SSH con Reenvío X11 en Ubuntu Desktop](#práctica-guiada-uso-de-ssh-con-reenvío-x11-en-ubuntu-desktop)
+  - [1. Instalar y configurar un ***SERVIDOR*** SSH en Ubuntu Desktop](#1-instalar-y-configurar-un-servidor-ssh-en-ubuntu-desktop)
+  - [2. Habilitar el reenvío de X11 en el servidor SSH](#2-habilitar-el-reenvío-de-x11-en-el-servidor-ssh)
+  - [3. Configurar el ***CLIENTE*** SSH para permitir reenvío X11](#3-configurar-el-cliente-ssh-para-permitir-reenvío-x11)
+  - [4. Verificar que el entorno gráfico está activo en el cliente](#4-verificar-que-el-entorno-gráfico-está-activo-en-el-cliente)
+  - [5. Conectarse por SSH con reenvío X11](#5-conectarse-por-ssh-con-reenvío-x11)
+  - [6. Ejecutar una aplicación gráfica en el servidor remoto](#6-ejecutar-una-aplicación-gráfica-en-el-servidor-remoto)
+  - [7. Ejecutar comandos remotos sin sesión interactiva](#7-ejecutar-comandos-remotos-sin-sesión-interactiva)
+  - [8. Capturas a entregar:](#8-capturas-a-entregar)
+    - [📸 Captura 1 — Conexión SSH con reenvío X11 activa](#-captura-1--conexión-ssh-con-reenvío-x11-activa)
+    - [📸 Captura 2 — Aplicación gráfica visible y proceso activo en el servidor](#-captura-2--aplicación-gráfica-visible-y-proceso-activo-en-el-servidor)
 
-## Introducción
-En esta práctica, los alumnos configurarán un servidor SSH en Ubuntu Desktop para probar el reenvío de aplicaciones gráficas mediante X11. El objetivo es comprender cómo funciona esta funcionalidad y probar su rendimiento en diferentes condiciones.
+# Práctica guiada: Uso de SSH con Reenvío X11 en Ubuntu Desktop
+
+**Introducción**
+
+En esta práctica vas a configurar y utilizar **SSH con reenvío X11** para ejecutar aplicaciones gráficas en un equipo remoto y visualizarlas en tu equipo local.
+
+⚠️ **Idea clave antes de empezar**
+La aplicación **se ejecuta en el servidor**, pero **se muestra en el cliente**.
+No se envía el programa, se envía el **dibujo de la ventana** a través de la conexión SSH.
 
 ---
 
-## **Pasos a seguir**
+**Pasos a seguir**
 
-### 1. Instalar y configurar un servidor SSH en Ubuntu Desktop
-- **Objetivo**: Tener un servidor SSH funcional.
-- Pasos:
-  1. Instalar el paquete `openssh-server` en el servidor:
-     ```bash
-     sudo apt update && sudo apt install openssh-server
-     ```
-  2. Verificar que el servicio está activo:
-     ```bash
-     sudo systemctl status ssh
-     ```
+---
 
+## 1. Instalar y configurar un ***SERVIDOR*** SSH en Ubuntu Desktop
 
-### 2. Habilitar el reenvío de X11 en la configuración del servidor SSH
-- **Objetivo**: Configurar el servidor SSH para permitir aplicaciones gráficas.
-- Pasos:
-  1. Editar el archivo de configuración del servidor SSH:
-     ```bash
-     sudo nano /etc/ssh/sshd_config
-     ```
-  2. Asegurarse de que las siguientes opciones están activadas (o descomentarlas):
-     ```
-     X11Forwarding yes
-     X11DisplayOffset 10
-     ```
-  ![alt text](z1.png)
-  
-  3. Reiniciar el servicio SSH para aplicar los cambios:
-     ```bash
-     sudo systemctl restart ssh
-     ```
+* Objetivo
 
-### 3. Configurar el cliente SSH para permitir el reenvío de X11
-- **Objetivo**: Preparar el cliente SSH para aceptar aplicaciones gráficas del servidor.
-- Pasos:
-  1. Verificar que el cliente tiene instalado el paquete `ssh`:
-     ```bash
-     sudo apt update && sudo apt install openssh-client
-     ```
-  2. Verificar que el directorio `~/.ssh/` existe: (si no existe, lo crea)
-     ```bash
-     mkdir -p ~/.ssh/
-     ```
-  3. Comprobar que el reenvío X11 está habilitado de forma predeterminada. Editar o crear el archivo `~/.ssh/config` si es necesario:
-     ```
-     Host *
+Disponer de un servidor SSH operativo que permita conexiones remotas.
+
+* Pasos
+
+1. Instala el servidor SSH:
+
+   ```bash
+   sudo apt update && sudo apt install openssh-server
+   ```
+
+2. Comprueba que el servicio está activo:
+
+   ```bash
+   sudo systemctl status ssh
+   ```
+
+* Qué debes comprobar
+
+* El servicio aparece como **active (running)**.
+* Si no lo está, no será posible continuar con la práctica.
+
+---
+
+## 2. Habilitar el reenvío de X11 en el servidor SSH
+
+* Objetivo
+
+Permitir que el servidor acepte la ejecución de aplicaciones gráficas a través de SSH.
+
+* Pasos
+
+1. Abre el archivo de configuración del servidor SSH:
+
+   ```bash
+   sudo nano /etc/ssh/sshd_config
+   ```
+
+2. Localiza y deja activadas (sin `#`) las siguientes líneas:
+
+   ```
+   X11Forwarding yes
+   X11DisplayOffset 10
+   ```
+
+   Estas opciones indican que:
+
+   * El servidor **acepta reenvío X11**.
+   * Asigna pantallas virtuales a partir de un desplazamiento seguro.
+
+![alt text](z1.png)
+
+3. Reinicia el servicio SSH:
+
+   ```bash
+   sudo systemctl restart ssh
+   ```
+
+* Qué debes comprobar
+
+* No aparece ningún error al reiniciar el servicio.
+* El servicio sigue activo tras el reinicio.
+
+---
+
+## 3. Configurar el ***CLIENTE*** SSH para permitir reenvío X11
+
+* Objetivo
+
+Asegurarse de que el cliente SSH acepta aplicaciones gráficas del servidor.
+
+* Pasos
+
+1. Verifica que el cliente SSH está instalado: (si ya lo está, recibirás un mensaje)
+
+   ```bash
+   sudo apt update && sudo apt install openssh-client
+   ```
+
+2. Comprueba que existe el directorio de configuración del cliente: (con el modificador -p , `mkdir`solo crea el directorio si no ***existe***)
+
+   ```bash
+   mkdir -p ~/.ssh/
+   ```
+
+3. Edita (o crea) el archivo de configuración del cliente:
+
+   ```bash
+   nano ~/.ssh/config
+   ```
+
+   - Añade el siguiente contenido:
+
+      ```
+      Host *
          ForwardX11 yes
-     ```
+      ```
 
-### 4. Verificar que el servidor X11 está activo y configurado correctamente en el cliente
-- **Objetivo**: Confirmar que el cliente puede recibir aplicaciones X11.
-- Pasos:
-  1. Instalar un servidor X si es necesario (normalmente ya está configurado en Ubuntu Desktop).
-  2. Asegurarse de que la variable de entorno `DISPLAY` está configurada:
-     ```bash
-     echo $DISPLAY
-     > 0:
-     ```
-     Si no hay salida, iniciar sesión en un entorno gráfico o configurar el servidor X manualmente.
+* Qué debes entender
 
-### 5. Probar la conexión SSH con reenvío de X11 desde el cliente al servidor
-- **Objetivo**: Verificar que la conexión SSH permite ejecutar aplicaciones gráficas.
-- Pasos:
-  1. Conectarse al servidor SSH desde el cliente con el reenvío de X11 habilitado:
-     ```bash
-     ssh -X usuario@direccion_ip_del_servidor
-     ```
-  ![alt text](z5.png)
-  
-  2. Comprobar que la variable `DISPLAY` está configurada en la sesión remota:
-     ```bash
-     echo $DISPLAY
-     > 10:0 (o similar)
-     ```
+* Esta configuración **habilita el reenvío X11 por defecto**.
+* Aun así, más adelante forzarás esta opción explícitamente con `-X`.
 
-### 6. Ejecutar y verificar la aplicación gráfica en el servidor remoto
+---
 
-#### 6.1 Ejecutar la aplicación gráfica
-- **Objetivo**: Probar que las aplicaciones gráficas funcionan a través del reenvío X11.
-- Pasos:
-  1. Ejecutar una aplicación gráfica, como un editor de texto o un navegador:
-     ```bash
-     xclock
-     ```
-  2. Verificar que la aplicación se abre en el cliente local.
+## 4. Verificar que el entorno gráfico está activo en el cliente
+
+* Objetivo
+
+Confirmar que el equipo cliente puede mostrar aplicaciones X11.
+
+* Pasos
+
+1. Comprueba el valor de la variable de entorno `DISPLAY`:
+
+   ```bash
+   echo $DISPLAY
+   ```
+
+2. El resultado debería ser algo similar a:
+
+   ```
+   :0
+   ```
+
+   o
+
+   ```
+   :0.0
+   ```
+
+* Qué debes comprobar
+
+* Si no aparece ningún valor, **no hay un entorno gráfico activo**.
+* En ese caso, no podrás continuar con la práctica.
+
+---
+
+## 5. Conectarse por SSH con reenvío X11
+
+* Objetivo
+
+Establecer una conexión SSH que permita ejecutar aplicaciones gráficas.
+
+* Pasos
+
+1. Conéctate al servidor usando:
+
+   ```bash
+   ssh -X usuario@direccion_ip_del_servidor
+   ```
+
+![alt text](z5.png)
+
+2. Una vez conectado al servidor por SSH, comprueba en la sesión remota el valor de la variable `DISPLAY`:
+
+   ```bash
+   echo $DISPLAY
+   ```
+
+3. El resultado será similar a:
+
+   ```
+   localhost:10.0
+   ```
+
+* Qué debes entender
+
+* El número **no es el mismo** que en el cliente.
+* SSH ha creado una **pantalla virtual** para reenviar gráficos.
+
+---
+
+## 6. Ejecutar una aplicación gráfica en el servidor remoto
+
+* 6.1 Ejecutar la aplicación
+
+* Objetivo
+
+Comprobar que una aplicación gráfica del servidor se muestra en el cliente.
+
+1. Ejecuta en la sesión SSH:
+
+   ```bash
+   xclock
+   ```
+
+2. Observa la ventana que aparece en tu escritorio local.
 
 ![alt text](z61.png)
 
-#### 6.2 Verificar la ejecución en el servidor remoto
-- **Objetivo**: Confirmar que la aplicación gráfica está siendo ejecutada en el servidor remoto.
-- Pasos:
-  1. En el servidor, usar el comando:
-     ```bash
-     cat grep 'sshd' /var/log/auth.log
-     ```
-  4. Verificar que aparece una conexión desde la ip del cliente con el nombre del usuario utilizado.
-  3. En el servidor remoto, usar el comando:
-     ```bash
-     ps aux | grep xclock
-     ```
-  4. Verificar que aparece un proceso relacionado con la aplicación ejecutada.
+* Qué debes observar
 
-![alt text](image.png)
-
-### 7. Ejecutar comandos directamente, sin establecer conexión
-
-Es posible ejecutar comandos que actúen en el servidor directamente desde el cliente, sin necesidad de establecer una conexión.
-
-Para ello, utilizamos la siguiente sintaxis:
-
-   ```bash
-   ssh -X usuario@ipdelservidor comando
-
-   # ejemplo: (crea un directorio en el servidor)
-   
-   ssh -X miguel@172.100.50.25 mkdir 'NUEVO'   
-   ```
-
-![alt text](image-1.png)
-
-### (OPCIONAL) 8. Analizar el tráfico generado y su rendimiento en diferentes condiciones de red
-- **Objetivo**: Entender el impacto del reenvío X11 en el rendimiento de la red.
-- Pasos:
-  1. Usar herramientas como `iftop` o `nload` para analizar el tráfico generado:
-     ```bash
-     sudo apt install iftop
-     sudo iftop -i <interfaz_de_red>
-     ```
-  2. Cambiar la red a una conexión de baja velocidad (simulada) y repetir la prueba.
-
-### (OPCIONAL) 9. Deshabilitar el reenvío de X11 y comprobar que las aplicaciones gráficas dejan de funcionar
-- **Objetivo**: Validar el efecto de deshabilitar el reenvío X11 en SSH.
-- Pasos:
-  1. *SERVIDOR:* Editar el archivo de configuración del servidor SSH:
-     ```bash
-     sudo nano /etc/ssh/sshd_config
-     ```
-  2. Cambiar la opción `X11Forwarding` a `no`. Esto deshabilitará el reenvío X11, impidiendo que las aplicaciones gráficas del servidor se muestren en el cliente local.
-  3. Reiniciar el servicio SSH:
-     ```bash
-     sudo systemctl restart ssh
-     ```
-  4. *CLIENTE:* Cerrar la conexión SSH actual:
-     ```bash
-     exit
-     ```
-  5. Reconectar al servidor SSH con una nueva sesión y verificar que no es posible ejecutar aplicaciones gráficas.
+* La ventana aparece **en el cliente**.
+* El comando se ha ejecutado **en el servidor**.
 
 ---
 
+* 6.2 Verificar la ejecución en el servidor
 
+* Objetivo
+
+Demostrar que el proceso pertenece al servidor, no al cliente.
+
+1. En el servidor, revisa el log de autenticación:
+
+   ```bash
+   grep 'sshd' /var/log/auth.log
+   ```
+
+2. Comprueba que aparece una conexión desde la IP del cliente.
+
+3. Localiza el proceso de la aplicación:
+
+   ```bash
+   ps aux | grep xclock
+   ```
+
+4. Verifica que:
+
+   * El proceso está activo.
+   * Pertenece al usuario conectado por SSH.
+
+![alt text](image.png)
+
+* Idea clave
+
+Aunque la ventana se vea en tu equipo, **el proceso vive en el servidor**.
+
+---
+
+## 7. Ejecutar comandos remotos sin sesión interactiva
+
+* Objetivo
+
+Ejecutar órdenes directamente en el servidor sin abrir una sesión SSH.
+
+* Sintaxis general
+
+```bash
+ssh -X usuario@ipdelservidor comando
+```
+
+* Ejemplo
+
+```bash
+ssh -X miguel@172.100.50.25 mkdir 'NUEVO'
+```
+
+![alt text](image-1.png)
+
+
+---
+
+## 8. Capturas a entregar:
+
+### 📸 Captura 1 — Conexión SSH con reenvío X11 activa
+
+* Qué debe mostrar la captura
+
+Una **terminal con sesión SSH abierta** desde el cliente hacia el servidor, en la que se vea claramente:
+
+* El comando de conexión utilizado:
+
+  ```bash
+  ssh -X usuario@ip_del_servidor
+  ```
+* El prompt del **servidor remoto** (nombre de máquina o usuario distinto del cliente).
+* La comprobación de la variable `DISPLAY`:
+
+  ```bash
+  echo $DISPLAY
+  ```
+* Un valor similar a:
+
+  ```
+  localhost:10.0
+  ```
+
+* Qué demuestra didácticamente
+
+Esta captura prueba que:
+
+* La conexión SSH está funcionando.
+* El reenvío X11 está **activo y operativo**.
+* El alumno entiende que el entorno gráfico remoto se gestiona mediante variables de entorno.
+
+Es la evidencia mínima de que **SSH + X11 está correctamente configurado**, incluso antes de ejecutar aplicaciones.
+
+---
+
+### 📸 Captura 2 — Aplicación gráfica visible y proceso activo en el servidor
+
+* Qué debe mostrar la captura
+
+Una imagen (o pantalla partida) en la que se vea simultáneamente:
+
+**Parte A – En el cliente**
+
+* La ventana de la aplicación gráfica `xclock` visible en el escritorio local.
+
+**Parte B – En la terminal del servidor**
+
+* El comando:
+
+  ```bash
+  ps aux | grep xclock
+  ```
+* La línea del proceso `xclock` en ejecución, asociada al usuario conectado por SSH.
+
+* Qué demuestra didácticamente
+
+Esta captura es la más importante, porque evidencia que:
+
+* La aplicación **se ejecuta en el servidor**, no en el cliente.
+* La interfaz gráfica se redirige correctamente.
+* El alumno comprende (o al menos ha verificado) la separación **ejecución ↔ visualización**.
+
+Con esta captura se desmonta el error conceptual más habitual:
+
+> “La aplicación se está ejecutando en mi equipo.”
