--- a/TAREAS/SR0603_X11/SR0603_X11.md
+++ b/TAREAS/SR0603_X11/SR0603_X11.md
@@ -236,7 +236,7 @@ Demostrar que el proceso pertenece al servidor, no al cliente.
 1. En el servidor, revisa el log de autenticación:
 
    ```bash
-   grep 'sshd' /var/log/auth.log
+   grep -a 'sshd' /var/log/auth.log #el modificador -a hace que grep trate los archivos como texto aunque crea que no lo son
    ```
 
 2. Comprueba que aparece una conexión desde la IP del cliente.
