Capturas a entregar en la práctica JS

--- a/TAREAS/SR0503_JS/SR0503_js.md
+++ b/TAREAS/SR0503_JS/SR0503_js.md
@@ -1,4 +1,11 @@
-### Práctica: Ejecutar un Script de JavaScript desde un Archivo Externo
+- [Práctica: Ejecutar un Script de JavaScript desde un Archivo Externo](#práctica-ejecutar-un-script-de-javascript-desde-un-archivo-externo)
+    - [Paso 1: Crear el Archivo HTML](#paso-1-crear-el-archivo-html)
+    - [Paso 2: Crear el Archivo JavaScript](#paso-2-crear-el-archivo-javascript)
+    - [Paso 3: Subir los Archivos al Servidor](#paso-3-subir-los-archivos-al-servidor)
+    - [Paso 4: Acceder a la Página en el Navegador](#paso-4-acceder-a-la-página-en-el-navegador)
+    - [Captura a entregar](#captura-a-entregar)
+
+# Práctica: Ejecutar un Script de JavaScript desde un Archivo Externo
 
 En esta práctica, los alumnos aprenderán cómo enlazar un archivo JavaScript externo en el `<head>` de un documento HTML utilizando el atributo `defer`. Este enfoque asegura que el script no bloquee la carga de la página y que se ejecute después de que el DOM esté completamente cargado.
 
@@ -63,7 +70,13 @@ document.getElementById("miBoton").addEventListener("click", function() {
 
 ---
 
-### Explicación de `defer`:
+### Captura a entregar
+
+A la izquierda arriba: Directorio con los archivos .html y .js creados
+A la izquierda abajo: contenido del .js.
+A la derecha: acceso desde el navegador a la página en la que se vea lo que sucede cuando pulsas el botón.
+
+* Explicación de `defer`:
 - **¿Qué hace `defer`?**: Permite que el navegador descargue el archivo JavaScript de manera asíncrona, pero pospone su ejecución hasta que el DOM esté completamente cargado.
 - **Ventaja**: El uso de `defer` asegura que no haya errores al manipular elementos HTML, ya que el script se ejecuta cuando el DOM está listo.
 
