Retoco principal DNS

--- a/UT03/SR03.md
+++ b/UT03/SR03.md
@@ -1,15 +1,26 @@
-## **Unidad de Trabajo 3: Servicios de Resolución de Nombres**
+# **Unidad de Trabajo 3: Servicios de Resolución de Nombres**
+
+[1. Introducción](#1-introducción)
+[2. Sistemas de Nombres Planos](#2-sistemas-de-nombres-planos)
+[3. Sistemas de Nombres Jerárquicos](#3-sistemas-de-nombres-jerárquicos)
+[4. Consultas DNS](#4-consultas-dns)
+[5. Tipos de Servidores DNS](#5-tipos-de-servidores-dns)
+[6. Zonas de Resolución Directa e Inversa](#6-zonas-de-resolución-directa-e-inversa)
+[7. Registros DNS](#7-registros-dns)
+[8. Actualizaciones Dinámicas (DDNS)](#8-actualizaciones-dinámicas-ddns)
+[9. DNS Seguro (DNSSEC)](#9-dns-seguro-dnssec)
+[10. Cliente DNS (Resolver)](#10-cliente-dns-resolver)
 
 Estos apuntes cuentan con ampliaciones [+]() que debes ver y con extras [++]() que son opcionales. 
 
-#### **1. Introducción** [+](./SR0301.md)
+## **1. Introducción** [+](./SR0301.md)
 
 A medida que la cantidad de dispositivos conectados a redes, ya sea locales o Internet, crece, también aumenta la necesidad de acceder a estos recursos. Aunque conocer las direcciones IP de estos dispositivos puede ser suficiente, para los humanos es mucho más sencillo recordar nombres que combinaciones numéricas.  
 Los servicios de resolución de nombres son fundamentales para facilitar el acceso a los recursos en red al traducir nombres de dominio a direcciones IP y viceversa.
 
 ---
 
-#### **2. Sistemas de Nombres Planos** [+](./SR0302.md)
+## **2. Sistemas de Nombres Planos** [+](./SR0302.md)
 
 Los sistemas de nombres planos permiten identificar y acceder a dispositivos dentro de una red sin necesidad de conocer su estructura lógica.  
 - **NetBIOS** es un protocolo que utiliza nombres planos para identificar equipos en una red local y resolver sus direcciones IP. No necesita un servidor central, ya que es un servicio distribuido.  
@@ -17,15 +28,15 @@ Los sistemas de nombres planos permiten identificar y acceder a dispositivos den
 
 ---
 
-#### **3. Sistemas de Nombres Jerárquicos** [+](./SR0303.md)
+## **3. Sistemas de Nombres Jerárquicos** [+](./SR0303.md)
 
 A diferencia de los sistemas planos, los sistemas jerárquicos ofrecen una estructura lógica de la red y permiten una resolución eficiente a través de dominios.
 
-##### 3.1. Protocolo DNS
+### 3.1. Protocolo DNS
 
 El **Domain Name System (DNS)** es el sistema jerárquico más usado, diseñado para traducir nombres de dominio en direcciones IP. Fue creado en 1984 y opera principalmente sobre UDP, aunque también puede usar TCP para transferencias de zona cuando los datos superan los 512 bytes.
 
-##### 3.2. Funcionamiento del DNS
+### 3.2. Funcionamiento del DNS
 
 - Los servidores DNS responden a las consultas de los clientes. Los clientes, a su vez, implementan el **resolver DNS**, que se encarga de realizar consultas, interpretar las respuestas y devolver la información solicitada.
   
@@ -33,7 +44,7 @@ El **Domain Name System (DNS)** es el sistema jerárquico más usado, diseñado 
   - **Caché DNS**: Permite almacenar temporalmente las respuestas de consultas para optimizar el rendimiento.
   - **Fichero `hosts`**: Un método local para la resolución de nombres, utilizado en sistemas Windows y Linux.
 
-##### 3.3. Estructura de DNS
+### 3.3. Estructura de DNS
 
 El DNS está organizado de manera jerárquica y distribuida.  
 - Cada servidor DNS es responsable de una **zona**, una parte del árbol de nombres de dominio.  
@@ -45,34 +56,34 @@ Los nombres de dominio se representan como un árbol invertido, en el que:
 
 ---
 
-#### **4. Consultas DNS** [+](./SR0304.md)
+## **4. Consultas DNS** [+](./SR0304.md)
 
-##### 4.1. Tipos de consultas
+### 4.1. Tipos de consultas
 
 - **Recursiva**: El servidor DNS responde con el resultado completo o un error si no puede resolver la consulta.
 - **Iterativa**: El servidor responde con el resultado, un error, o una referencia a otro servidor DNS si no puede resolver la consulta directamente.
 
-##### 4.2. Respuestas DNS
+### 4.2. Respuestas DNS
 
 -**Autoritaiva**
 -**No autoritativa**
 
 
-##### 4.3. Transferencia de Zonas
+### 4.3. Transferencia de Zonas
 
 Para mantener la coherencia entre servidores, el contenido de las zonas se transfiere de un servidor primario (maestro) a uno secundario (esclavo). Esto se hace mediante una **transferencia de zona**. Las transferencias pueden ser:
 - **Completas**: Copia total de la zona.
 - **Incrementales**: Sólo los cambios desde la última transferencia. Este método es más eficiente.
 
-##### 4.4. Caché DNS
+### 4.4. Caché DNS
 
-##### 4.5. Resolución Inversa
+### 4.5. Resolución Inversa
 
-##### 4.6. Delegación y Reenvío en DNS
+### 4.6. Delegación y Reenvío en DNS
 
 ---
 
-#### **5. Tipos de Servidores DNS** [+](./SR0305.md)
+## **5. Tipos de Servidores DNS** [+](./SR0305.md)
 
 - **Servidor Primario**: Gestiona directamente los registros DNS de una zona.
 - **Servidor Secundario**: Recibe los registros de un servidor primario y los almacena para redundancia.
@@ -80,14 +91,14 @@ Para mantener la coherencia entre servidores, el contenido de las zonas se trans
 
 ---
 
-#### **6. Zonas de Resolución Directa e Inversa** [++](./SR0306.md)
+## **6. Zonas de Resolución Directa e Inversa** [++](./SR0306.md)
 
 - **Resolución directa**: Traduce nombres DNS a direcciones IP.
 - **Resolución inversa**: Traduce direcciones IP a nombres DNS. Esto se implementa mediante zonas adicionales, usando el dominio `in-addr.arpa` para IPv4 y `ip6.arpa` para IPv6.
 
 ---
 
-#### **7. Registros DNS** [+](./SR0307.md)
+## **7. Registros DNS** [+](./SR0307.md)
 
 Los registros DNS tienen la siguiente estructura:
 - **Nombre de dominio**: El nombre del recurso.
@@ -104,19 +115,19 @@ Los registros DNS tienen la siguiente estructura:
 
 ---
 
-#### **8. Actualizaciones Dinámicas (DDNS)** [++](./SR0308.md)
+## **8. Actualizaciones Dinámicas (DDNS)** [++](./SR0308.md)
 
 El **DDNS (Dynamic DNS)** permite actualizar de manera dinámica los registros DNS cuando las direcciones IP de los dispositivos cambian, por ejemplo, cuando un servidor obtiene su IP de un servidor DHCP. Esto permite que el nombre de dominio siempre corresponda a la IP actual del dispositivo.
 
 ---
 
-#### **9. DNS Seguro (DNSSEC)** [++](./SR0309.md)
+## **9. DNS Seguro (DNSSEC)** [++](./SR0309.md)
 
 **DNSSEC** añade una capa de seguridad al DNS, utilizando criptografía asimétrica para garantizar la autenticidad e integridad de los datos DNS. No todos los servidores soportan este estándar, por lo que su implementación debe ser cuidadosamente gestionada.
 
 ---
 
-#### **10. Cliente DNS (Resolver)** [+](./SR0310.md)
+## **10. Cliente DNS (Resolver)** [+](./SR0310.md)
 
 El **resolver** es el servicio que ejecuta consultas DNS a los servidores configurados cuando se necesita la traducción de un nombre de dominio a IP.
 
@@ -127,6 +138,6 @@ El **resolver** es el servicio que ejecuta consultas DNS a los servidores config
 
 ---
 
-## MÁS INFORMACIÓN ##
+# MÁS INFORMACIÓN ##
 
 [WikiVersity: DNS what and how](https://en.wikiversity.org/wiki/User:Jane_Kruch/DNS:_what_is_it_and_how_it_works)
