--- a/UT03/SR03.md
+++ b/UT03/SR03.md
@@ -13,14 +13,16 @@
 
 Estos apuntes cuentan con ampliaciones [+]() que debes ver y con extras [++]() que son opcionales. 
 
-## **1. Introducción** [+](./SR0301.md)
+## **1. Introducción**
+[+](./SR0301.md)
 
 A medida que la cantidad de dispositivos conectados a redes, ya sea locales o Internet, crece, también aumenta la necesidad de acceder a estos recursos. Aunque conocer las direcciones IP de estos dispositivos puede ser suficiente, para los humanos es mucho más sencillo recordar nombres que combinaciones numéricas.  
 Los servicios de resolución de nombres son fundamentales para facilitar el acceso a los recursos en red al traducir nombres de dominio a direcciones IP y viceversa.
 
 ---
 
-## **2. Sistemas de Nombres Planos** [+](./SR0302.md)
+## **2. Sistemas de Nombres Planos**
+[+](./SR0302.md)
 
 Los sistemas de nombres planos permiten identificar y acceder a dispositivos dentro de una red sin necesidad de conocer su estructura lógica.  
 - **NetBIOS** es un protocolo que utiliza nombres planos para identificar equipos en una red local y resolver sus direcciones IP. No necesita un servidor central, ya que es un servicio distribuido.  
@@ -28,7 +30,8 @@ Los sistemas de nombres planos permiten identificar y acceder a dispositivos den
 
 ---
 
-## **3. Sistemas de Nombres Jerárquicos** [+](./SR0303.md)
+## **3. Sistemas de Nombres Jerárquicos**
+[+](./SR0303.md)
 
 A diferencia de los sistemas planos, los sistemas jerárquicos ofrecen una estructura lógica de la red y permiten una resolución eficiente a través de dominios.
 
@@ -56,7 +59,8 @@ Los nombres de dominio se representan como un árbol invertido, en el que:
 
 ---
 
-## **4. Consultas DNS** [+](./SR0304.md)
+## **4. Consultas DNS**
+[+](./SR0304.md)
 
 ### 4.1. Tipos de consultas
 
@@ -83,7 +87,8 @@ Para mantener la coherencia entre servidores, el contenido de las zonas se trans
 
 ---
 
-## **5. Tipos de Servidores DNS** [+](./SR0305.md)
+## **5. Tipos de Servidores DNS**
+[+](./SR0305.md)
 
 - **Servidor Primario**: Gestiona directamente los registros DNS de una zona.
 - **Servidor Secundario**: Recibe los registros de un servidor primario y los almacena para redundancia.
@@ -91,14 +96,16 @@ Para mantener la coherencia entre servidores, el contenido de las zonas se trans
 
 ---
 
-## **6. Zonas de Resolución Directa e Inversa** [++](./SR0306.md)
+## **6. Zonas de Resolución Directa e Inversa**
+[++](./SR0306.md)
 
 - **Resolución directa**: Traduce nombres DNS a direcciones IP.
 - **Resolución inversa**: Traduce direcciones IP a nombres DNS. Esto se implementa mediante zonas adicionales, usando el dominio `in-addr.arpa` para IPv4 y `ip6.arpa` para IPv6.
 
 ---
 
-## **7. Registros DNS** [+](./SR0307.md)
+## **7. Registros DNS**
+[+](./SR0307.md)
 
 Los registros DNS tienen la siguiente estructura:
 - **Nombre de dominio**: El nombre del recurso.
@@ -115,19 +122,22 @@ Los registros DNS tienen la siguiente estructura:
 
 ---
 
-## **8. Actualizaciones Dinámicas (DDNS)** [++](./SR0308.md)
+## **8. Actualizaciones Dinámicas (DDNS)**
+[++](./SR0308.md)
 
 El **DDNS (Dynamic DNS)** permite actualizar de manera dinámica los registros DNS cuando las direcciones IP de los dispositivos cambian, por ejemplo, cuando un servidor obtiene su IP de un servidor DHCP. Esto permite que el nombre de dominio siempre corresponda a la IP actual del dispositivo.
 
 ---
 
-## **9. DNS Seguro (DNSSEC)** [++](./SR0309.md)
+## **9. DNS Seguro (DNSSEC)**
+[++](./SR0309.md)
 
 **DNSSEC** añade una capa de seguridad al DNS, utilizando criptografía asimétrica para garantizar la autenticidad e integridad de los datos DNS. No todos los servidores soportan este estándar, por lo que su implementación debe ser cuidadosamente gestionada.
 
 ---
 
-## **10. Cliente DNS (Resolver)** [+](./SR0310.md)
+## **10. Cliente DNS (Resolver)**
+[+](./SR0310.md)
 
 El **resolver** es el servicio que ejecuta consultas DNS a los servidores configurados cuando se necesita la traducción de un nombre de dominio a IP.
 
