--- a/TAREAS/SR03DNS/propuesta/S0304_DNSWS19.md
+++ b/TAREAS/SR03DNS/propuesta/S0304_DNSWS19.md
@@ -49,10 +49,10 @@ Configura una dirección IP fija en el servidor, acorde a la red interna que se 
 
 Ejemplo de configuración:
 
-* Dirección IP: `172.16.0.4`
-* Máscara: `255.255.0.0`
+* Dirección IP: `192.168.2.1`
+* Máscara: `255.255.255.0`
 * Puerta de enlace: *(no necesaria en red interna)*
-* DNS preferido: `172.16.0.4`
+* DNS preferido: `192.168.2.1`
 
 La configuración puede realizarse:
 
@@ -72,16 +72,12 @@ Instala el servicio DNS utilizando **PowerShell**:
 ```powershell
 Install-WindowsFeature -Name DNS -IncludeManagementTools
 ```
+![alt text](image.png)
 
 Comprueba que la instalación finaliza correctamente.
 
-📎 *Captura reutilizable de tu guion:*
+![alt text](image-1.png)
 
-```md
-![alt text](../1.png)
-```
-
-*(Instalación del rol DNS en Windows Server)*
 
 ---
 
@@ -95,9 +91,9 @@ Get-Service -Name DNS
 
 El servicio debe aparecer en estado **Running**.
 
-📸 **Captura 4 (obligatoria)**
+📸 **Captura 2 (obligatoria)**
 
-* Salida del comando `Get-Service -Name DNS` mostrando el servicio DNS en ejecución.
+* Salida del comando `Get-Service -Name DNS` mostrando el servicio DNS en ejecución. Se debe ver el nombre de tu máquina virtual.
 
 ---
 
@@ -118,32 +114,12 @@ Observa:
 
 📌 En este punto **no debe existir ninguna zona creada**.
 
-📎 *Captura reutilizable de tu guion:*
 
-
-
-*(Vista inicial del Administrador DNS en Windows Server)*
-
-📸 **Captura 5 (obligatoria)**
+📸 **Captura 3 (obligatoria)**
 
 * Vista del Administrador DNS sin zonas configuradas.
 
----
-
-## Comprobación básica del servicio
-
-Desde el propio servidor, ejecuta:
-
-```powershell
-nslookup localhost
-```
-
-Comprueba que:
-
-* El servicio DNS responde.
-* El servidor es capaz de atender consultas locales.
-
-(No es necesario aportar captura de este paso).
+![alt text](image-2.png)
 
 ---
 
@@ -162,8 +138,8 @@ Comprueba que:
 ## Capturas que debes conservar de esta práctica
 
 * 📸 Captura 1 → IP estática configurada
-* 📸 Captura 4 → Servicio DNS en ejecución
-* 📸 Captura 5 → Administrador DNS (estado inicial)
+* 📸 Captura 2 → Servicio DNS en ejecución
+* 📸 Captura 3 → Administrador DNS (estado inicial)
 
 ---
 
