fusiono 4 y 5, ahora la 5 es zona inversa

--- a/TAREAS/SR03DNS/propuesta/S0304_DNSWS19.md
+++ b/TAREAS/SR03DNS/propuesta/S0304_DNSWS19.md
@@ -1,10 +1,11 @@
-(revisar capturas que puedo añadir y las que se les pide: yo creo
+(revisar capturas que puedo añadir y las que se les
+ pide: yo creo
 Captura de la configuración IP.
 Captura del Administrador DNS.
 Captura del nslookup localhost.)
 
 
-# 🧪 **Práctica 4 — Instalación y puesta en marcha del servicio DNS en Windows Server 2019**
+# 🧪 **Práctica 4 — Instalación y puesta en marcha del servicio DNS en Windows Server 2019 — Creación de zona directa y resolución de nombres**
 
 **Módulo:** Servicios en Red
 **Unidad de Trabajo:** UT03 – DNS
@@ -16,8 +17,9 @@ Captura del nslookup localhost.)
 
 Instalar el servicio DNS en **Windows Server 2019**, configurar correctamente la **red interna y la IP estática**, y comprobar que el **servicio DNS está operativo**, dejando el servidor preparado para la creación de zonas y registros en las siguientes sesiones.
 
-En esta práctica **no se crean zonas DNS** ni se configuran servidores secundarios, subdominios o reenviadores.
+Crear una **zona de búsqueda directa** en el servidor DNS y añadir **registros básicos coherentes**, comprobando desde un cliente que los nombres definidos se resuelven correctamente.
 
+El objetivo no es “llenar el DNS”, sino **entender que DNS funciona a base de datos bien estructurados**.
 ---
 
 ## Escenario de trabajo
@@ -26,6 +28,7 @@ En esta práctica **no se crean zonas DNS** ni se configuran servidores secundar
 * VirtualBox.
 * Red configurada en **modo Red Interna**.
 * No se requiere conexión a Internet.
+* Al menos un equipo cliente en la misma red interna.
 
 ---
 
@@ -54,12 +57,7 @@ Ejemplo de configuración:
 * Puerta de enlace: *(no necesaria en red interna)*
 * DNS preferido: `192.168.2.1`
 
-La configuración puede realizarse:
-
-* de forma gráfica
-* o mediante PowerShell
-
-📸 **Captura 1 (obligatoria)**
+📸 **Captura 1:: 1-ip.png**
 
 * Propiedades de IPv4 mostrando la IP estática configurada.
 
@@ -91,7 +89,7 @@ Get-Service -Name DNS
 
 El servicio debe aparecer en estado **Running**.
 
-📸 **Captura 2 (obligatoria)**
+📸 **Captura 2:: 2-instalado.png**
 
 * Salida del comando `Get-Service -Name DNS` mostrando el servicio DNS en ejecución. Se debe ver el nombre de tu máquina virtual.
 
@@ -115,23 +113,140 @@ Observa:
 📌 En este punto **no debe existir ninguna zona creada**.
 
 
-📸 **Captura 3 (obligatoria)**
+📸 **Captura 3: 3-dns.png**
 
 * Vista del Administrador DNS sin zonas configuradas.
 
 ![alt text](image-2.png)
 
+## 6. Creación de la zona directa
+
+En el **Administrador DNS** del servidor:
+
+1. Accede a **Zonas de búsqueda directa**.
+2. Crea una nueva zona con las siguientes características:
+   * Tipo de zona: **Zona principal**
+   * Nombre de la zona:
+
+     ```
+     tunombre.local
+     ```
+
+> *Crear un archivo nuevo con este nombre...*
+>    *No permitir actualizaciones dinámicas.*
+Finaliza el asistente y comprueba que la zona aparece creada.
+
+![alt text](image-6.png)
+
+![alt text](image-5.png)
+
+![alt text](image-7.png)
+
+📸 **Captura 4: 4-zona.png**
+
+* Vista de la zona recién creada
+
 ---
 
-## Instrucciones de entrega (importante)
+## 7. Observación del registro SOA y NS
 
-* **Esta práctica es obligatoria**, pero **NO se entrega todavía**.
-* Se entregará **junto con las siguientes prácticas de la UT**, también obligatorias.
-* A partir de ahora:
+Dentro de la zona `ejemplo.local`, observa los registros creados automáticamente:
 
-  * Debes **guardar todas las capturas** solicitadas.
-  * Debes **responder por escrito** a las preguntas que se planteen en cada práctica.
-* Todo el material se recopilará en **una única memoria final** de la UT.
+* Registro **SOA**
+* Registro(s) **NS**
+
+Responde brevemente:
+
+* ¿Por qué estos registros existen aunque no los hayas creado manualmente?
+* ¿Qué información general aporta cada uno?
+
+📌 No es necesario modificar estos registros en esta práctica.
+
+---
+
+## 8. Creación de registros A (hosts)
+
+Añade los siguientes registros **A** dentro de la zona:
+
+![alt text](51.png)
+
+
+| Nombre | Dirección IP                      |
+| ------ | --------------------------------- |
+| `ns1`  | IP del servidor DNS               |
+| `pc1`  | IP de un equipo cliente           |
+| `www`  | IP de un equipo (real o ficticio) |
+
+📌 **Importante**
+
+* El registro `ns1` debe apuntar a la IP real del servidor DNS.
+* Los demás registros deben ser coherentes con la red interna.
+* Dejar *Crear registro del puerto PTR asociado **desactivado**.
+
+![alt text](image-8.png)
+
+---
+
+## 9. Creación de un alias (CNAME)
+
+Crea un registro **CNAME** con las siguientes características:
+
+* Alias:
+
+  ```
+  web
+  ```
+* Nombre canónico:
+
+  ```
+  www.ejemplo.local
+  ```
+
+![alt text](../image-1.png)
+
+![alt text](image-9.png)
+
+*(Creación de registro CNAME)*
+
+📸 **Captura 5: 5-registros.png**
+
+* Vista de la zona recién creada
+---
+
+## 5. Comprobación de la resolución desde un cliente
+
+Desde un equipo cliente de la red interna, comprueba la resolución de los siguientes nombres:
+
+* `ns1.ejemplo.local`
+* `pc1.ejemplo.local`
+* `web.ejemplo.local`
+
+Utiliza herramientas de consulta vistas en sesiones anteriores (`ping`, `nslookup`).
+
+![alt text](image-10.png)
+
+📸 **Captura 6: 6-ping.png**
+
+* Resultado de nslookup consultando todos los registros A creados y ping a todos los nombres.
+
+📌 No es necesario que todos los nombres respondan a `ping`; lo importante es la **resolución DNS**.
+
+---
+
+## Qué se evalúa en esta práctica
+
+* Creación correcta de una zona directa.
+* Comprensión de los registros SOA y NS.
+* Coherencia en los registros A creados.
+* Uso correcto de un alias CNAME.
+* Capacidad para comprobar la resolución desde cliente.
+
+---
+
+## Idea clave que debe quedar clara
+
+> *Configurar DNS no es “activar un servicio”,
+> es definir correctamente los datos que describen una red.*
 
 ---
 
@@ -140,22 +255,15 @@ Observa:
 * 📸 Captura 1 → IP estática configurada
 * 📸 Captura 2 → Servicio DNS en ejecución
 * 📸 Captura 3 → Administrador DNS (estado inicial)
+* 📸 Captura 4 → Vista de la nueva zona
+* 📸 Captura 5 → Listado de registros creados
+* 📸 Captura 6 → Nslookup y ping a todos los registros
 
 ---
 
 ## Qué **no** se hace en esta práctica
 
-❌ No se crean zonas
-❌ No se crean registros
 ❌ No se configuran reenviadores
-❌ No se clonan máquinas
 ❌ No se configuran servidores secundarios
 
----
-
-## Idea clave que debe quedar clara
-
-> *Antes de enseñar al DNS qué dominio controla,
-> el servicio debe estar correctamente instalado,
-> con una red estable y una IP bien definida.*
 
