Pequeño apunte en práctica DNS 1

--- a/TAREAS/SR03DNS/propuesta/S0304_DNSWS19.md
+++ b/TAREAS/SR03DNS/propuesta/S0304_DNSWS19.md
@@ -162,6 +162,15 @@ Responde brevemente:
 
 📌 No es necesario modificar estos registros en esta práctica.
 
+📌 En esta práctica **no es necesario modificar manualmente** los registros SOA y NS.
+
+El objetivo en este punto es **identificar su existencia y comprender su función**:
+- El registro **SOA** identifica al servidor DNS como autoridad de la zona.
+- El registro **NS** indica qué servidor o servidores responden por dicha zona.
+
+En prácticas posteriores se trabajará con mayor detalle su configuración y
+su relación con la resolución inversa y la distribución del servicio DNS.
+
 ---
 
 ## 8. Creación de registros A (hosts)
